# efv

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
efv/: __init__.py  analyzer.py  cli.py  gui.py
tests/: __init__.py  test_analyzer.py
