[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efv"
version = "1.0.0"
description = "Embedded Filesystem Visualizer - Analyze mounted rootfs filesystems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Osama Abdelkader", email = "osama.abdelkader@gmail.com"}
]
maintainers = [
    {name = "Osama Abdelkader", email = "osama.abdelkader@gmail.com"}
]
keywords = ["filesystem", "embedded", "analysis", "rootfs", "ext4", "squashfs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
    "psutil>=5.9.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "pathlib2>=2.3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
gui = [
    "tkinter",
]

[project.urls]
Homepage = "https://github.com/osamakader/efv"
Documentation = "https://github.com/osamakader/efv#readme"
Repository = "https://github.com/osamakader/efv"
"Bug Tracker" = "https://github.com/osamakader/efv/issues"

[project.scripts]
efv = "efv.cli:main"
efv-gui = "efv.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["efv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=efv",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "psutil.*",
    "rich.*",
    "colorama.*",
    "tkinter.*",
]
ignore_missing_imports = true 